--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ img {
     center/cover;
 }
 
+.hero.blog::before {
+  background: none;
+}
+
 .hero.blog .content h1 {
   font-size: 3rem;
   margin-top: -3rem;
