--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,12 @@
+.hero .content h1 {
+  margin-top: -5rem;
+  margin-bottom: 3rem;
+}
+
+.hero .content .btn {
+  margin-top: 3rem;
+}
+
 /* Hamburger Menu */
 .menu-wrap {
   position: fixed;
@@ -179,6 +188,7 @@
 
 @media (max-width: 768px) {
   /* Hero */
+
   .hero.blog {
     height: 80vh;
   }
@@ -276,7 +286,7 @@
     font-size: 1.3rem;
   }
   .hero .content h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-top: 0;
   }
   .navbar {
@@ -374,9 +384,9 @@
 }
 
 @media (max-width: 320px) {
-  .hero .content h1 {
+  /* .hero .content h1 {
     font-size: 2.5rem;
-  }
+  } */
 
   .hero .content p {
     font-size: 1rem;
@@ -406,17 +416,6 @@
   .donation-form {
     min-width: 200px;
     max-width: 320px;
-  }
-
-  .donation-payment-cc-exp {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .exp-sel-day,
-  .exp-sel-month {
-    height: 40px;
-    margin-bottom: 15px;
   }
 }
 
