--- a/css/style.css
+++ b/css/style.css
@@ -131,12 +131,32 @@ img {
 .hero .content h1 {
   font-size: 3.3rem;
   margin-top: 2rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 2rem; */
 }
 .hero .content p {
   font-size: 1.5rem;
   max-width: 700px;
   margin: 1rem 0 2rem;
+}
+
+/* video */
+.hero .content > div {
+  width: 100%;
+  max-width: 660px;
+}
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  width: 100%;
+}
+
+.embed-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .hero .content .btn {
@@ -166,7 +186,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .hero.blog {
@@ -301,7 +321,7 @@ img {
 }
 
 .gal-9 {
-  background: url("../images/gal/rainbow.jpeg") center center/cover;
+  background: url("../images/gal/rainbow-2.jpg") center center/cover;
   background-size: cover;
 }
 
@@ -409,7 +429,7 @@ img {
   display: flex;
   justify-content: space-evenly;
   padding: 0 1rem;
-  background: url(../images/gal/sunset-2.JPEG) center center / cover;
+  background: url(../images/gal/sunset-3.JPEG) center center / cover;
 }
 
 .donation-header {
@@ -435,7 +455,6 @@ img {
 
 .donation-form {
   display: grid;
-
   color: #fff;
   padding: 1rem;
   margin: 1rem 0;
