--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,8 @@ img {
 
 .hero .content h1 {
   font-size: 3.3rem;
-  margin-top: 2rem;
-  /* margin-bottom: 2rem; */
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
 }
 .hero .content p {
   font-size: 1.5rem;
@@ -157,10 +157,25 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  border: none;
+}
+
+/* Iframe POp-out */
+.hide-pop-out {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  opacity: 0.9;
+}
+
+.hide-pop-out img {
+  opacity: 1;
 }
 
 .hero .content .btn {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .hero.stories .content h1 {
@@ -347,41 +362,7 @@ img {
   max-height: 600px;
 }
 
-/*.donation-header {
-  background: var(--primary-color);
-  padding: 1rem 0 1rem 1rem;
-  text-align: left;
-  color: #fff;
-}
-
-.donation-header > h3 {
-  margin-right: .5rem;
-  font-size: 1.3rem;
-}
-
-.donation-header span {
-  background: #fff;
-  color: #333;
-  padding: 2px 8px 5px;
-  margin-right: .5rem;
-  border-radius: 50%;
-}
-
-.donation-form {
-  display: grid;
-  border: 2px solid var(--primary-color);
-  color: #333;
-  padding: 1rem; 
-  max-width: 446px;
-}
-
-.donation-form > * {
-  margin: .5rem 0;
-}
-*/
-
 /* Donation */
-/* 1 - Payment Amount */
 
 #donate-main .container {
   color: #333;
@@ -458,7 +439,6 @@ img {
   color: #fff;
   padding: 1rem;
   margin: 1rem 0;
-  /* max-width: 446px; */
   max-width: 1200px;
 }
 
@@ -473,7 +453,6 @@ img {
 } */
 
 .donorbox a {
-  /* background: #057389  url(https://d1iczxrky3cnb2.cloudfront.net/red_logo.png) no-repeat 37px; */
   background: #057389;
   color: #fff;
   font-family: Verdana, sans-serif;
@@ -563,14 +542,6 @@ img {
   max-height: 350px;
   border-radius: 50%;
 }
-
-/* .team .flex-items .president {
-  margin-right: 7rem;
-}
-
-.team .flex-items .vp {
-  margin-left: 7rem;
-} */
 
 .team .flex-items h4 {
   font-size: 1.4rem;
