--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,11 @@
 .hero .content h1 {
   margin-top: -5rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
+  font-size: 2.5rem;
 }
 
 .hero .content .btn {
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 /* Hamburger Menu */
@@ -188,6 +189,12 @@
 
 @media (max-width: 768px) {
   /* Hero */
+
+  .hero .content h1 {
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
 
   .hero.blog {
     height: 80vh;
