--- a/css/style.css
+++ b/css/style.css
@@ -134,9 +134,9 @@ img {
   margin-bottom: 1.5rem;
 }
 .hero .content p {
-  font-size: 1.5rem;
+  font-size: 0.6rem;
   max-width: 700px;
-  margin: 1rem 0 2rem;
+  margin: 0;
 }
 
 /* video */
