--- a/css/mobile.css
+++ b/css/mobile.css
@@ -312,7 +312,7 @@
   }
 
   #about .icons-3 {
-    margin-bottom: none;
+    margin-bottom: 0;
   }
   #about .icons-3 a {
     display: inline-block;
