--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ img {
 }
 
 .icons-3 {
-  margin-bottom: 8rem;
+  margin-bottom: 5rem;
 }
 
 .icons-3 p{
@@ -705,5 +705,5 @@ img {
 }
 
 #footer .links p {
-  font-size: 0.7rem;
+  font-size: 12px;
 }
